--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -13,13 +13,13 @@ const { title, description, pubDate, updatedDate, author } = Astro.props;
 	<div class="sm:mt-20 mx-auto max-w-[700px] text-wrap mb-8">
 		<a
 			href="/"
-			class="w-50 sm:text-lg text-text-400 hover:text-text normal-case font-normal hover:underline no-underline"
+			class="w-50 sm:text-lg text-text-400 hover:text-text normal-case font-normal hover:underline no-underline pl-4"
 			><Icon
 				name="angles-left-solid"
 				class="inline-block text-sm mb-1"
 			/>Back</a
 		>
-		<div class="p-1">
+		<div class="p-4">
 			<h1 class="text-xl sm:text-4xl font-semibold">{title}</h1>
 			<h2 class="sm:text-lg font-semibold mt-4">
 				{description}
