--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ const buttonStyles =
 ---
 
 <BasePage>
-	<div class="sm:mt-20 block mx-auto max-w-[700px] text-wrap sm:text-lg">
+	<div class="sm:mt-20 block mx-auto max-w-[700px] text-wrap sm:text-lg md:px-0 px-3">
 		<h1 class="text-4xl sm:text-5xl my-4 font-semibold">Sam Baumohl</h1>
 		<p class="mb-1">
 			I am a student at the University of Wisconsin-Madison studying
