--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,16 +31,18 @@ const buttonStyles =
 					href="/blog/uw-madison-courses/">CS major</a>
 			</li>
 			<li>
+				an incoming SWE Intern at Netflix for the summer of 2025</li>
+			<li>
 				a Coordinator at Madison's&nbsp;<CustomLink
 					href="https://www.upl.cs.wisc.edu/"
 					>Undergraduate Project Lab</CustomLink
 				>
-				<li>
-					a passionate member of the&nbsp;<CustomLink
-						href="https://waisi.org/"
-						>Wisconsin AI Safety Initiative (WAISI)</CustomLink
-					>
-				</li>
+
+			</li>
+			<li>
+				a passionate member of the&nbsp;<CustomLink
+					href="https://waisi.org/"
+					>Wisconsin AI Safety Initiative (WAISI)</CustomLink>
 			</li>
 		</ul>
 		<h2 class={subheaderStyles}>Socials</h2>
