--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -42,7 +42,7 @@ const { title, description, pubDate, updatedDate, author } = Astro.props;
 				<span>{author}</span>
 			</div>
 			<article
-				class="prose prose-neutral prose-sm sm:prose-base max-w-none text-wrap"
+				class="prose text-black prose-neutral prose-sm sm:prose-base max-w-none text-wrap"
 			>
 				<slot />
 			</article>
