--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,7 +31,7 @@ const buttonStyles =
 					href="/blog/uw-madison-courses/">CS major</a>
 			</li>
 			<li>
-				an incoming Software Engineering Intern at Netflix for the summer of 2025
+				an incoming software engineering intern at Netflix for the summer of 2025
 			</li>
 			<li>
 				a Coordinator at Madison's&nbsp;<CustomLink
