--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -10,6 +10,7 @@ const { title, description, pubDate, updatedDate, author } = Astro.props;
 ---
 
 <BasePage>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.13.0/dist/katex.min.css">
 	<div class="sm:mt-20 mx-auto max-w-[700px] text-wrap mb-8">
 		<a
 			href="/"
