--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -26,7 +26,7 @@ const { title, description, pubDate, updatedDate, author } = Astro.props;
 				{description}
 			</h2>
 			<hr class="mt-1 mb-2 border-black" />
-			<div class="sm:text-lg mb-6 flex flex-row gap-x-2">
+			<div class="text-xs sm:text-lg mb-6 flex flex-row gap-x-2">
 				<span>Published on<FormattedDate date={pubDate} /></span
 				>&middot;
 				{
