--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -33,7 +33,7 @@ const { title, description, pubDate, updatedDate, author } = Astro.props;
 					updatedDate && (
 						<>
 							<span>
-								Last updated on{" "}
+								Updated on{" "}
 								<FormattedDate date={updatedDate} />
 							</span>
 							<span>&middot;</span>
