back style, course update

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -9,17 +9,21 @@ type Props = CollectionEntry<"blog">["data"];
 const { title, description, pubDate, updatedDate, author } = Astro.props;
 ---
 
-<BasePage>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.13.0/dist/katex.min.css">
+<BasePage>
 	<div class="sm:mt-20 mx-auto max-w-[700px] text-wrap mb-8">
-		<a
-			href="/"
-			class="w-50 sm:text-lg text-text-400 hover:text-text normal-case font-normal hover:underline no-underline pl-4"
-			><Icon
-				name="angles-left-solid"
-				class="inline-block text-sm mb-1"
-			/>Back</a
-		>
+    <a
+    href="/"
+    class="inline-flex items-center text-text-400 hover:text-text font-normal text-base sm:text-lg group transition-colors duration-150 ease-in-out pl-3 sm:pl-4" 
+    aria-label="Go back to the previous page"
+  >
+    <Icon
+      name="angles-left-solid"
+      class="w-4 h-4 sm:w-5 sm:h-5 mr-1.5 sm:mr-2 transform transition-transform duration-200 ease-in-out group-hover:-translate-x-1"
+      aria-hidden="true"
+    />
+    <span class="hover:underline">Back</span>
+  </a>
 		<div class="p-4">
 			<h1 class="text-xl sm:text-4xl font-semibold">{title}</h1>
 			<h2 class="sm:text-lg font-semibold mt-4">
@@ -27,13 +31,13 @@ const { title, description, pubDate, updatedDate, author } = Astro.props;
 			</h2>
 			<hr class="mt-1 mb-2 border-black" />
 			<div class="text-xs sm:text-lg mb-6 flex flex-row gap-x-2">
-				<span>Published on<FormattedDate date={pubDate} /></span
+				<span>Published <FormattedDate date={pubDate} /></span
 				>&middot;
 				{
 					updatedDate && (
 						<>
 							<span>
-								Updated on{" "}
+								Updated{" "}
 								<FormattedDate date={updatedDate} />
 							</span>
 							<span>&middot;</span>
