--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -2,16 +2,23 @@
 // Import the global.css file here so that it is included on
 // all pages through the use of the <BaseHead /> component.
 import "../styles/global.css";
+import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 
 interface Props {
 	title: string;
 	description: string;
-	image?: string;
+	ogType?: string;
 }
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
-const { title, description } = Astro.props;
+// fallback to site constants if none provided
+const { 
+	title = SITE_TITLE, 
+	description = SITE_DESCRIPTION, 
+	ogType = "website" 
+} = Astro.props;
+
 ---
 
 <!-- Global Metadata -->
@@ -46,3 +53,7 @@ const { title, description } = Astro.props;
 <title>{title}</title>
 <meta name="title" content={title} />
 <meta name="description" content={description} />
+<meta property="og:description" content={description} />
+<meta property="og:url" content={canonicalURL} />
+<meta property="og:site_name" content="baumohl dot dev" />
+<meta property="og:type" content={ogType} />
